<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/medic_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duree"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="47dp"
                android:layout_height="40dp"
                android:layout_marginStart="35dp"
                android:ems="10"
                android:inputType="number" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="95dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/petit_dej" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/dejeuner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/diner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/coucher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/heure_perso" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freq_heure_perso" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                />

            <TextView
                android:id="@+id/TextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freq_heure_perso_end" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:gravity="center"
                android:text="@string/freq_perso" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:textOff="@string/lundi"
                android:textOn="@string/lundi" />

            <ToggleButton
                android:id="@+id/toggleButton3"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:textOff="@string/marmer"
                android:textOn="@string/marmer" />

            <ToggleButton
                android:id="@+id/toggleButton4"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:textOff="@string/marmer"
                android:textOn="@string/marmer" />

            <ToggleButton
                android:id="@+id/toggleButton5"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:textOff="@string/jeudi"
                android:textOn="@string/jeudi"
                />

            <ToggleButton
                android:id="@+id/toggleButton6"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:textOff="@string/vendredi"
                android:textOn="@string/vendredi"
                />

            <ToggleButton
                android:id="@+id/toggleButton7"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:textOff="@string/samedi"
                android:textOn="@string/samedi"
                />

            <ToggleButton
                android:id="@+id/toggleButton8"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:textOff="@string/dimanche"
                android:textOn="@string/dimanche"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bouton_arrondi"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/button"
                android:layout_width="102dp"
                android:layout_height="31dp"
                android:background="@drawable/bouton_arrondi"
                android:text="@string/button_save"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>