<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/rem" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/titre_home"
                android:textSize="25sp" />


        </LinearLayout>

        <!--tools:showIn="@layout/app_bar_main">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:background="#AAA" />

                <TextView
                    android:id="@+id/medic"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:text="@string/medic1" />

                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    tools:text="@string/details1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">



                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:background="#AAA" />

                <TextView
                    android:id="@+id/medic2"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:text="@string/medic2" />

                <TextView
                    android:id="@+id/details2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    tools:text="@string/details2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:background="#AAA" />

                <TextView
                    android:id="@+id/medic3"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:text="@string/medic3" />

                <TextView
                    android:id="@+id/details3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    tools:text="@string/details3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:background="#AAA" />

                <TextView
                    android:id="@+id/medic4"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:text="@string/medic4" />

                <TextView
                    android:id="@+id/details4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    tools:text="@string/details4" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>